# RNOC-pof-system

./: .gitignore  README.md  build.py  requirements.txt  run.py
cpp_module/: CMakeLists.txt  CMakePresets.json  agent_live.cpp  agent_screenshot.cpp  agent_webcam.cpp  vcpkg.json
cpp_module/helper/: App.cpp  App.hpp  CMakeLists.txt  Utils.cpp  Utils.hpp  utils.cpp  utils.hpp
cpp_module/helper/classes/: CMakeLists.txt  Screenshot.cpp  Screenshot.hpp  Yolo.cpp  Yolo.hpp
cpp_module/helper/modules/: CMakeLists.txt  dxdiag.cpp  dxdiag.hpp
python_module/: App.py  RNOC_pof.py  compilation_command.txt  pof_server.py  requirements.txt
python_module/core/: api.py
python_module/core/ocr/: .gitignore  TRAINING_COMMAND.txt  prep_ocr_dataset.py
python_module/core/pof/: .gitignore  create_txt_for_images.py  gnn_trainer.py  prep_data_from_images.py
python_module/core/pof/GNN/: GModel.py
python_module/core/utils/: exception_handler.py  helpers.py  logger_config.py  node_type_config.py  pof.py  schema.py
python_module/core/yolo/: .gitignore  auto_anotate.py  bbox_2_seg.py  export_to_cvat.py  merge_segbbox_2_existing_seg.py  pt_to_onnx.py  trainer.py  trainer_colab.py
python_module/cvat_config/: classes_raw.txt
python_module/ocr/: prep_ocr_dataset.py  sort_dataset.py
python_module/pof/: gnn_trainer.py  prep_data_from_images.py
python_module/pof/GNN/: GModel.py
python_module/pof/Utils/: utils.py
python_module/utils/: config.py  exception_handler.py  pof.py  schema.py  utils.py
python_module/workspace/: .gitignore  classes.txt
python_module/workspace/OCR/images/: image_1001.gt.txt  image_10010.gt.txt  image_10011.gt.txt  image_10013.gt.txt  image_1002.gt.txt  image_1005.gt.txt  image_1006.gt.txt  image_1008.gt.txt  image_1009.gt.txt  image_10111.gt.txt  image_1014.gt.txt  image_1016.gt.txt  image_1017.gt.txt  image_1018.gt.txt  image_1019.gt.txt  image_1022.gt.txt  image_1023.gt.txt  image_1030.gt.txt  image_1041.gt.txt  image_1042.gt.txt  image_1045.gt.txt  image_1050.gt.txt  image_1051.gt.txt  image_1061.gt.txt  image_1064.gt.txt  image_1069.gt.txt  image_10712.gt.txt  image_1072.gt.txt  image_1074.gt.txt  image_1075.gt.txt  image_1076.gt.txt  image_1077.gt.txt  image_1079.gt.txt  image_10810.gt.txt  image_10811.gt.txt  image_10813.gt.txt  image_10815.gt.txt  image_10816.gt.txt  image_10817.gt.txt  image_10819.gt.txt  (+92 more)
python_module/workspace/labels/: TOPO AK0395.txt  TOPO T1085.txt  test.txt  topology_AK0031_20250704_191908.txt  topology_AK0132_20250704_192016.txt  topology_AK0156_20250704_192112.txt  topology_AK0302_20250704_192354.txt  topology_AK0318_20250704_192548.txt  topology_AK0395_20250704_192708.txt  topology_BA0103_20250706_22104.txt  topology_ED1432_20250704_163027.txt  topology_ED1433_20250704_163131.txt  topology_ED2043_20250704_163247.txt  topology_ED4939_20250704_163414.txt  topology_ED5143_20250704_163527.txt  topology_ED5211_20250704_163638.txt  topology_ED5345_20250704_164153.txt  topology_ED5367_20250704_164326.txt  topology_ED5512_20250704_164504.txt  topology_ED6108_20250704_164615.txt  topology_ED6211_20250704_164725.txt  topology_EK2234_20250704_164831.txt  topology_EK2276_20250704_164921.txt  topology_EK3789_20250704_165009.txt  topology_EK4429_20250704_165102.txt  topology_FC0001_20250704_142750.txt  topology_FC0037_20250704_142823.txt  topology_FC0083_20250704_142905.txt  topology_FC0122_20250704_142953.txt  topology_FC0139_20250704_143023.txt  topology_FC0204_20250704_143126.txt  topology_FC0228_20250704_143205.txt  topology_FC2019_20250704_143321.txt  topology_FC2020_20250704_143403.txt  topology_FC2024_20250704_143450.txt  topology_FC2030_20250704_143531.txt  topology_FC2103_20250704_143735.txt  topology_FC2135_20250704_143820.txt  topology_FC2161_20250704_143852.txt  topology_FC2175_20250704_143930.txt  (+484 more)
python_module/yolo/: auto_anotate.py  bbox_2_seg.py  export_to_cvat.py  merge_segbbox_2_existing_seg.py  pt_to_onnx.py  trainer.py  trainer_colab.py
python_module/yolo_train/: export_to_cvat.py  inference.py  merger.py  pt_to_onnx.py  trainer.py  trainer_colab.py  yolo_2_seg.py
